# rb3converter

./: .gitignore  Makefile.am  README.md  configure.ac  downloader.py
.github/workflows/: main.yml
rb3converter/: CMakeLists.txt  ConvertMid.cpp  ConvertMid.hpp  ConvertMogg.cpp  ConvertMogg.hpp  ConvertPNG.cpp  ConvertPNG.hpp  FileLoader.cpp  FileLoader.hpp  Makefile.am  NPD.cpp  NPD.hpp  STFS.cpp  STFS.hpp  dtaParser.cpp  dtaParser.hpp  main.cpp  songsManager.cpp  songsManager.hpp
rb3converter.xcodeproj/: project.pbxproj
